kubernetes/apps/network/external-dns-cloudflare/networkpolicy.yaml
---
# yaml-language-server: $schema=https://schemas.rzegocki.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: external-dns-cloudflare-egress-external
specs:
  - endpointSelector:
      matchLabels:
        app.kubernetes.io/instance: external-dns-cloudflare
    egress:
      - toFQDNs:
          - matchName: api.cloudflare.com
        toPorts:
          - ports:
              - port: "443"
